fix: FileInputWithCropper props

--- a/src/components/Modals/ActionModal/style.module.scss
+++ b/src/components/Modals/ActionModal/style.module.scss
@@ -40,4 +40,6 @@
 
 .body {
   padding-top: 72px;
+  display: flex;
+  justify-content: center;
 }
